--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+/* Boostrap icon CDN link */
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 #home ul li {
     
     border: 1px solid rgba(13, 13, 122, 0.61);
-   
-
-
+}
+#card-button{
+    display: flex;
+    justify-content: space-evenly;
 }
